--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,6 @@
     "mongoose": "^8.2.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.4",
-    "url": "^0.11.3"
+    "socket.io": "^4.7.4"
   }
 }
