--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,18 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "backend/index.js",
+            "src": "./server.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "backend/index.js"
-        },
-        {
             "src": "/(.*)",
-            "dest": "frontend/build/$1"
+            "dest": "/"
         }
     ]
 }
