Update start script in backend/package.json and frontend/package.json

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,27 +6,10 @@
             "use": "@vercel/node"
         }
     ],
-    "routes": [
-        { "handle": "filesystem" },
+    "rewrites": [
         {
-            "src": "/users/all",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/users/:name",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/users",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/scrape",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
