--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
