--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start -p 8080",
     "lint": "next lint"
@@ -15,6 +15,7 @@
     "emojibase-data": "^15.3.0",
     "libphonenumber-js": "^1.10.61",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.4",
