--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@mui/material": "^5.15.14",
     "emojibase-data": "^15.3.0",
     "libphonenumber-js": "^1.10.61",
-    "next": "14.1.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "parse-url-query-params": "^0.0.8",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
